log
Tue 14 May 2024 06:48:22 AM UTC: 
 tests:  0|5
total_score: 0/70
1213041
Tue 14 May 2024 07:02:15 AM UTC: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  0|5
total_score: 0/70
a3b4d7c
Tue 14 May 2024 07:03:33 AM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
ddeef16
Tue 14 May 2024 07:10:01 AM UTC: 
 sudoku.c | 17 +++++++++--------
 1 file changed, 9 insertions(+), 8 deletions(-)
 tests:  0|5
total_score: 0/70
c1014b2
Tue 14 May 2024 07:11:06 AM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:67:17: error: ‘aux’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   67 |                 pushBack(list,aux);
      |                 ^~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b9ee5d7
Tue 14 May 2024 07:11:37 AM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
58a2ddd
Tue 14 May 2024 07:12:45 AM UTC: 
 sudoku.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
d91a845
Tue 14 May 2024 07:13:05 AM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|5
total_score: 0/70
1844689
